# activity-info-scripts

./: README.md  activityinfo_openapi.json  common.py  config.py  db.py  forms.py  main.py  pyproject.toml  translations.py  users.py  utils.py
api/: __init__.py  client.py  endpoints.py  models.py
tests/: conftest.py  test_config.py  test_forms.py  test_translations.py  test_users.py
